<resources>
    <string name="app_name">SenTranslate</string>
    <string name="hello">Hello</string>
    <string name="hello_start">Lets create something news</string>
    <string name="pdf_option">PDF文档</string>
    <string name="tranlate_image">图片翻译</string>
    <string name="tools">日常工具</string>
    <string name="error_try">点击重试</string>
    <string name="next">下一步</string>
    <string name="find_wenzi_empty">没有找到文字哦~</string>
</resources>