<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimary">


        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="58dp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/helloStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/hello_start"
            android:textColor="@color/color_d1d1d1"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hello" />


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_radius_8"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomView">

            <TextView
                android:id="@+id/features"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tools"
                android:textColor="@color/color_BCB9BD"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/tranlateImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/features">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_cicle_48dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/tranlate_image"
                    android:textColor="@color/color_BCB9BD"
                    android:textSize="12sp" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/pdfOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@+id/tranlateImage"
                app:layout_constraintTop_toTopOf="@+id/tranlateImage">

                <ImageView

                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_cicle_48dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/pdf_option"
                    android:textColor="@color/color_BCB9BD"
                    android:textSize="12sp" />


            </LinearLayout>


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/bottomView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_radius_8"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>
</layout>